Add Combination_Sum_39 solution with backtracking approach